Enlarge fonts to suit iPad/iPhone. Fixed bug PrayerView not showing after editing Category

--- a/source/Theme.less
+++ b/source/Theme.less
@@ -42,10 +42,10 @@
 @onyx-gradient: url(../assets/toolbar.png);
 
 @onyx-toolbar-text-color: @darkRed;
-@onyx-toolbar-font-size: 28px;
-@onyx-font-size-small: 16px;
-@onyx-font-size-medium: 20px;
-@onyx-font-size-large: 26px;
+@onyx-toolbar-font-size: 36px;
+@onyx-font-size-small: 20px;
+@onyx-font-size-medium: 26px;
+@onyx-font-size-large: 36px;
 
 @onyx-text-color: @grayDark;
 
@@ -61,6 +61,7 @@
 /* Place your Onyx rule overrides here ------------------------ */
 body {
 	font-family: @onyx-font-family;
+    font-size: 18px;
 }
 
 .onyx-input-decorator.onyx-focused {
